# tinyslugifier

./: .gitignore
.github/workflows/: publish.yml
tinyslugifier/: .gitignore  README.md  pyproject.toml
tinyslugifier/.github/workflows/: publish.yml
tinyslugifier/src/tinyslugifier/: __init__.py
tinyslugifier/tests/: test_tinyslugifier.py
