[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyslugifier"
version = "0.1.1"
description = "A tiny slugifier for URL-friendly strings"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

authors = [
    { name = "Nuno Bispo", email = "developer@developer-service.io" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/nunombispo/tinyslugifier"
Documentation = "https://github.com/nunombispo/tinyslugifier#readme"
Repository = "https://github.com/nunombispo/tinyslugifier"
"Bug Tracker" = "https://github.com/nunombispo/tinyslugifier/issues"

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]
